:sparkles: feat: Criação de rota para userData
